Use of comments to explain code

--- a/02-FlexBox/assignment/index.html
+++ b/02-FlexBox/assignment/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
+    <!-- CSS Grid Container -->
     <div class="grid-container">
+        <!-- Header -->
         <header>Header</header>
+        <!-- Navigation -->
         <nav>
             <div>Nav Item</div>
             <div>Nav Item</div>
@@ -19,7 +22,9 @@
             <div>Nav Item</div>
             <div>Nav Item</div>
         </nav>
+        <!-- Sidebar and Main-->
         <div class="content">
+            <!-- Sidebar with pokemon placeholder images (good set of images all of same size)-->
             <aside>
                 Sidebar
                 <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/001.png"
@@ -29,8 +34,10 @@
                 <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/007.png"
                     alt="squirtle">
             </aside>
+            <!-- Main Content -->
             <main class="main">
                 <p>Main Content</p>
+                <!-- Lorem Ipsum-->
                 <div class="lorem-ipsum">
                     <p>
                         Lorem ipsum odor amet, consectetuer adipiscing elit. Leo integer amet in mauris turpis magna mus
@@ -78,6 +85,7 @@
                 </div>
             </main>
         </div>
+        <!-- Footer -->
         <footer>Footer</footer>
     </div>
 </body>
