--- a/03-Bootstrap/assignment/images.html
+++ b/03-Bootstrap/assignment/images.html
@@ -19,10 +19,10 @@
         <nav class="navbar navbar-expand-lg">
             <ul class="navbar-nav">
                 <li class="nav-item" data-toggle="tooltip" title="Landing Page">
-                    <a class="nav-link active" href="index.html">Landing Page</a>
+                    <a class="nav-link" href="index.html">Landing Page</a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" title="Images">
-                    <a class="nav-link" href="images.html">Images</a>
+                    <a class="nav-link active" href="images.html">Images</a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" title="Accordion">
                     <a class="nav-link" href="accordion.html">Accordion</a>
@@ -40,25 +40,14 @@
         </nav>
     </header>
     <main class="main">
-        <img src="https://t3.ftcdn.net/jpg/00/36/83/88/360_F_36838861_UHfFCcgipUy5Orup7vniss11Ly3OLsgf.jpg"
-            class="img-fluid" alt="bird landing"><br><br>
-        <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Magna consectetur porttitor ultrices egestas, maecenas
-            augue augue. Placerat auctor placerat suspendisse nisi condimentum; facilisis nisi primis fames. Dui erat
-            fusce elementum magnis cursus. Posuere lacus elementum commodo aliquet maecenas conubia. Fringilla eu
-            laoreet convallis; scelerisque luctus dictum. Sed erat volutpat; imperdiet quisque hac aptent mauris
-            consectetur. Inceptos nunc adipiscing volutpat eu lectus turpis leo.
-        </p>
-        <p>Viverra interdum sagittis donec litora sem phasellus ullamcorper. Maecenas hendrerit phasellus enim
-            vestibulum luctus suspendisse placerat felis suscipit. Finibus iaculis ultrices iaculis volutpat litora.
-            Potenti vehicula vivamus habitasse penatibus nec. Phasellus tortor dictumst diam senectus facilisi ultricies
-            sit posuere ultricies. Pretium et velit dis lectus cras.
-        </p>
-        <p>Aenean enim dictum vulputate interdum conubia efficitur. Mollis dapibus laoreet proin pharetra per taciti
-            felis a. Litora tortor sed maximus vulputate facilisi maecenas. Erat senectus eu risus quisque rutrum
-            aliquet venenatis. Tempus vestibulum vehicula a viverra habitant tempus; sociosqu cubilia porttitor.
-            Pellentesque vestibulum hendrerit nec platea proin hendrerit. Facilisis vehicula cursus blandit magna
-            elementum lacinia.
-        </p>
+        <img src="https://images.pexels.com/photos/346529/pexels-photo-346529.jpeg?auto=compress&cs=tinysrgb&w=600"
+            class="img-fluid" alt="mountains"/>
+        <img src="https://images.pexels.com/photos/147411/italy-mountains-dawn-daybreak-147411.jpeg?auto=compress&cs=tinysrgb&w=600"
+            class="img-fluid" alt="lake"/>
+        <img src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?auto=compress&cs=tinysrgb&w=600"
+            class="img-fluid" alt="greenery"/>
+        <img src="https://images.pexels.com/photos/709552/pexels-photo-709552.jpeg?auto=compress&cs=tinysrgb&w=600"
+        class="img-fluid" alt="river"/>
     </main>
 </body>
 
