--- a/03-Bootstrap/assignment/images.html
+++ b/03-Bootstrap/assignment/images.html
@@ -11,6 +11,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+        });
+    </script>
     <title>Assignment 03 - Bootstrap</title>
 </head>
 
@@ -18,22 +24,25 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <ul class="navbar-nav">
-                <li class="nav-item" data-toggle="tooltip" title="Landing Page">
+                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Landing Page">
                     <a class="nav-link" href="index.html">Landing Page</a>
                 </li>
-                <li class="nav-item" data-toggle="tooltip" title="Images">
+                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Images">
                     <a class="nav-link active" href="images.html">Images</a>
                 </li>
-                <li class="nav-item" data-toggle="tooltip" title="Accordion">
+                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Accordion">
                     <a class="nav-link" href="accordion.html">Accordion</a>
                 </li>
-                <li class="nav-item" data-toggle="tooltip" title="Grid System">
+                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Grid System">
                     <a class="nav-link" href="grid.html">Grid System</a>
                 </li>
-                <li class="nav-item" data-toggle="tooltip" title="Grid System">
+                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Popovers">
+                    <a class="nav-link" href="popovers.html">Popovers</a>
+                </li>
+                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Jumbotron">
                     <a class="nav-link" href="jumbotron.html">Jumbotron</a>
                 </li>
-                <li class="nav-item" data-toggle="tooltip" title="Carousel">
+                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Carousel">
                     <a class="nav-link" href="carousel.html">Carousel</a>
                 </li>
             </ul>
@@ -41,13 +50,13 @@
     </header>
     <main class="main">
         <img src="https://images.pexels.com/photos/346529/pexels-photo-346529.jpeg?auto=compress&cs=tinysrgb&w=600"
-            class="img-fluid" alt="mountains"/>
+            class="img-fluid" alt="mountains" />
         <img src="https://images.pexels.com/photos/147411/italy-mountains-dawn-daybreak-147411.jpeg?auto=compress&cs=tinysrgb&w=600"
-            class="img-fluid" alt="lake"/>
+            class="img-fluid" alt="lake" />
         <img src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?auto=compress&cs=tinysrgb&w=600"
-            class="img-fluid" alt="greenery"/>
+            class="img-fluid" alt="greenery" />
         <img src="https://images.pexels.com/photos/709552/pexels-photo-709552.jpeg?auto=compress&cs=tinysrgb&w=600"
-        class="img-fluid" alt="river"/>
+            class="img-fluid" alt="river" />
     </main>
 </body>
 
