--- a/03-Bootstrap/assignment/popovers.html
+++ b/03-Bootstrap/assignment/popovers.html
@@ -11,12 +11,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-                const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
-            });
-        </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
+            const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl));
+            const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+        });
+    </script>
     <title>Assignment 03 - Bootstrap</title>
 </head>
 
@@ -34,10 +36,10 @@
                     <a class="nav-link" href="accordion.html">Accordion</a>
                 </li>
                 <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Grid System">
-                    <a class="nav-link active" href="grid.html">Grid System</a>
+                    <a class="nav-link" href="grid.html">Grid System</a>
                 </li>
                 <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Popovers">
-                    <a class="nav-link" href="popovers.html">Popovers</a>
+                    <a class="nav-link active" href="popovers.html">Popovers</a>
                 </li>
                 <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Jumbotron">
                     <a class="nav-link" href="jumbotron.html">Jumbotron</a>
@@ -49,27 +51,28 @@
         </nav>
     </header>
     <main class="main">
-        <div class="container mt-3">
-            <div class="row">
-                <!-- Menu Section -->
-                <nav class="col-xl-3 col-lg-4 col-md-5 col-sm-12 bg-light col-xs-3">
-                    <h3>Menu</h3>
-                    <ul class="nav flex-column">
-                        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    </ul>
-                </nav>
-                <!-- Content Section -->
-                <main class="col-xl-9 col-lg-8 col-md-7 col-sm-12 col-xs-3">
-                    <h2>Responsive Content</h2>
-                    <p>
-                        Resize the browser window to see the sections rearrange themselves.
-                    </p>
-                </main>
-            </div>
-        </div>
+        <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" data-bs-title="Popover title"
+            data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle
+            popover</button>
+        <br><br>
+        <span style="margin-left: 200px">
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
+                data-bs-placement="left" data-bs-content="Left popover">
+                Popover on left
+            </button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
+                data-bs-placement="top" data-bs-content="Top popover">
+                Popover on top
+            </button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
+                data-bs-placement="bottom" data-bs-content="Bottom popover">
+                Popover on bottom
+            </button>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
+                data-bs-placement="right" data-bs-content="Right popover">
+                Popover on right
+            </button>
+        </span>
     </main>
 </body>
 
