fixes to make popovers fit on mobile screen

--- a/03-Bootstrap/assignment/index.html
+++ b/03-Bootstrap/assignment/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="grid.html">Grid System</a>
                 </li>
                 <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Popovers">
-                    <a class="nav-link active" href="popovers.html">Popovers</a>
+                    <a class="nav-link" href="popovers.html">Popovers</a>
                 </li>
                 <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Jumbotron">
                     <a class="nav-link" href="jumbotron.html">Jumbotron</a>
@@ -51,23 +51,8 @@
     <main class="main">
         <img src="https://t3.ftcdn.net/jpg/00/36/83/88/360_F_36838861_UHfFCcgipUy5Orup7vniss11Ly3OLsgf.jpg"
             class="img-fluid" alt="bird landing"><br><br>
-        <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Magna consectetur porttitor ultrices egestas, maecenas
-            augue augue. Placerat auctor placerat suspendisse nisi condimentum; facilisis nisi primis fames. Dui erat
-            fusce elementum magnis cursus. Posuere lacus elementum commodo aliquet maecenas conubia. Fringilla eu
-            laoreet convallis; scelerisque luctus dictum. Sed erat volutpat; imperdiet quisque hac aptent mauris
-            consectetur. Inceptos nunc adipiscing volutpat eu lectus turpis leo.
-        </p>
-        <p>Viverra interdum sagittis donec litora sem phasellus ullamcorper. Maecenas hendrerit phasellus enim
-            vestibulum luctus suspendisse placerat felis suscipit. Finibus iaculis ultrices iaculis volutpat litora.
-            Potenti vehicula vivamus habitasse penatibus nec. Phasellus tortor dictumst diam senectus facilisi ultricies
-            sit posuere ultricies. Pretium et velit dis lectus cras.
-        </p>
-        <p>Aenean enim dictum vulputate interdum conubia efficitur. Mollis dapibus laoreet proin pharetra per taciti
-            felis a. Litora tortor sed maximus vulputate facilisi maecenas. Erat senectus eu risus quisque rutrum
-            aliquet venenatis. Tempus vestibulum vehicula a viverra habitant tempus; sociosqu cubilia porttitor.
-            Pellentesque vestibulum hendrerit nec platea proin hendrerit. Facilisis vehicula cursus blandit magna
-            elementum lacinia.
-        </p>
+        <p>Click on one of the options in the navigation bar in order to see various Bootstrap 5 functionalities.</p>
+        <p>Jumbotrons are no longer supported in Bootstrap 5, so the jumbotron page required Bootstrap 4.</p>
     </main>
 </body>
 
