--- a/03-Bootstrap/assignment/popovers.html
+++ b/03-Bootstrap/assignment/popovers.html
@@ -55,24 +55,34 @@
             data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle
             popover</button>
         <br><br>
-        <span style="margin-left: 200px">
-            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
-                data-bs-placement="left" data-bs-content="Left popover">
-                Popover on left
-            </button>
+        <div style="margin-left: 100px">
             <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
                 data-bs-placement="top" data-bs-content="Top popover">
-                Popover on top
+                Click for popover on top
             </button>
-            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
-                data-bs-placement="bottom" data-bs-content="Bottom popover">
-                Popover on bottom
-            </button>
+        </div>
+        <br>
+        <div style="margin-left: 30px">
             <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
                 data-bs-placement="right" data-bs-content="Right popover">
-                Popover on right
+                Click for popover on right
             </button>
-        </span>
+        </div>
+        <br>
+        <div style="margin-left: 170px">
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
+                data-bs-placement="left" data-bs-content="Left popover">
+                Click for popover on left
+            </button>
+        </div>
+        <br>
+        <div style="margin-left: 100px">
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
+                data-bs-placement="bottom" data-bs-content="Bottom popover">
+                Click for popover on bottom
+            </button>
+        </div>
+        <br>
     </main>
 </body>
 
