--- a/03-Bootstrap/assignment/accordion.html
+++ b/03-Bootstrap/assignment/accordion.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/png" href="boot.ico" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Bootstrap 5.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <!-- You must initialize tooltips before they can be used. 
+    One way to initialize all tooltips on a page would be to select them by their data-bs-toggle attribute -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
@@ -22,7 +26,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <!-- nav bar with tooltips where the user can navigate between the pages -->
+        <nav class="navbar navbar-expand-lg bg-info-subtle">
             <ul class="navbar-nav">
                 <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Landing Page">
                     <a class="nav-link" href="index.html">Landing Page</a>
@@ -48,6 +53,9 @@
             </ul>
         </nav>
     </header>
+    <!-- Accordions expand/collapse the accordion content. To render an accordion that’s expanded by default, 
+    add the .show class on the .accordion-collapse element, drop the .collapsed class from the .accordion-button element,
+    and set its aria-expanded attribute to true -->
     <main class="main">
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
