--- a/03-Bootstrap/assignment/index.html
+++ b/03-Bootstrap/assignment/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/png" href="boot.ico" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Bootstrap 5.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <!-- You must initialize tooltips before they can be used. 
+    One way to initialize all tooltips on a page would be to select them by their data-bs-toggle attribute -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
@@ -22,7 +26,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <!-- nav bar with tooltips where the user can navigate between the pages -->
+        <nav class="navbar navbar-expand-lg bg-info-subtle">
             <ul class="navbar-nav">
                 <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Landing Page">
                     <a class="nav-link active" href="index.html">Landing Page</a>
@@ -48,10 +53,12 @@
             </ul>
         </nav>
     </header>
+    <!-- landing page contents -->
     <main class="main">
+        <br>
         <img src="https://t3.ftcdn.net/jpg/00/36/83/88/360_F_36838861_UHfFCcgipUy5Orup7vniss11Ly3OLsgf.jpg"
             class="img-fluid" alt="bird landing"><br><br>
-        <p>Click on one of the options in the navigation bar in order to see various Bootstrap 5 functionalities.</p>
+        <p>Click on one of the options in the navigation bar to see various Bootstrap 5 functionalities.</p>
         <p>Jumbotrons are no longer supported in Bootstrap 5, so the jumbotron page required Bootstrap 4.</p>
     </main>
 </body>
