--- a/03-Bootstrap/assignment/jumbotron.html
+++ b/03-Bootstrap/assignment/jumbotron.html
@@ -5,52 +5,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/png" href="boot.ico" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    <!-- Tooltips in Bootstrap 4 require jQuery and Popper.js in addition to Bootstrap for CSS and JavaScript -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <!-- One way to initialize all tooltips on a page would be to select them by their data-toggle attribute -->
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
         });
     </script>
+    <!-- In Bootstrap 4.4, there isn't a direct equivalent to Bootstrap 5.3's .bg-info-subtle class -->
+    <style>
+        .bg-info-subtle {
+            background-color: rgb(207, 244, 252);
+        }
+    </style>
     <title>Assignment 03 - Bootstrap</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <!-- nav bar with tooltips where the user can navigate between the pages -->
+        <nav class="navbar navbar-expand-lg bg-info-subtle">
             <ul class="navbar-nav">
-                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Landing Page">
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Landing Page">
                     <a class="nav-link" href="index.html">Landing Page</a>
                 </li>
-                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Images">
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Images">
                     <a class="nav-link" href="images.html">Images</a>
                 </li>
-                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Accordion">
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Accordion">
                     <a class="nav-link" href="accordion.html">Accordion</a>
                 </li>
-                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Grid System">
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Grid System">
                     <a class="nav-link" href="grid.html">Grid System</a>
                 </li>
-                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Popovers">
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Popovers">
                     <a class="nav-link" href="popovers.html">Popovers</a>
                 </li>
-                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Jumbotron">
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Jumbotron">
                     <a class="nav-link active" href="jumbotron.html">Jumbotron</a>
                 </li>
-                <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Carousel">
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Carousel">
                     <a class="nav-link" href="carousel.html">Carousel</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <!-- Jumbotron only available in Bootstrap 4-->
     <main class="main">
         <div class="jumbotron">
             <h1 class="display-4">Hello, world!</h1>
