--- a/03-Bootstrap/assignment/popovers.html
+++ b/03-Bootstrap/assignment/popovers.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="boot.ico"
+    />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Bootstrap 5.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <!-- You must initialize tooltips before they can be used. 
+    One way to initialize all tooltips on a page would be to select them by their data-bs-toggle attribute -->
+    <!-- you must initialize popovers before they can be used. 
+    One way to initialize all popovers on a page would be to select them by their data-bs-toggle attribute-->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
@@ -24,7 +34,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <!-- nav bar with tooltips where the user can navigate between the pages -->
+        <nav class="navbar navbar-expand-lg bg-info-subtle">
             <ul class="navbar-nav">
                 <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Landing Page">
                     <a class="nav-link" href="index.html">Landing Page</a>
@@ -50,6 +61,7 @@
             </ul>
         </nav>
     </header>
+    <!-- Popovers are available that are placed to the top, bottom, left, or right of element -->
     <main class="main">
         <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" data-bs-title="Popover title"
             data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle
